IP adress tracking, 10s cooldown, icon and redesign in messageList (for frontend)

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>React + Express + TS</title>
+    <title>Fake Twitter Projekts</title>
+    <link rel="icon" href="/src/assets/Twiteric.png" />
   </head>
   <body>
     <div id="root"></div>
